--- a/Blog -ASP.NET MVC Practical Project/Content/Site.css
+++ b/Blog -ASP.NET MVC Practical Project/Content/Site.css
@@ -73,9 +73,18 @@ textarea {
 .table{
 color:palegoldenrod;
 }
-.big-form-control{
+.big-form-control {
+    width: 100%;
+    height: 400px;
+    background-image: url(../Content/paper.png);
+    background-size: 100%;
+    background-repeat: repeat-y;
+    font-size: 200%;
+}
+
+.middle-form-control{
     width:100%;
-    height:400px;
+    height:150px;
     background-image: url(../Content/paper.png);
     background-size: 100%;
     background-repeat: repeat-y;
