--- a/Blog -ASP.NET MVC Practical Project/Views/Shared/_Layout.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Shared/_Layout.cshtml
@@ -25,8 +25,9 @@
                         <li class="alltext">@Html.ActionLink("Guides", "Index", "Posts")</li>
                         <li class="alltext">@Html.ActionLink("My Guides", "Index", "MyPosts")</li>
                         <li class="alltext">@Html.ActionLink("New Guide", "Create", "Posts")</li>
-                        <li class="alltext">@Html.ActionLink("Discuss", "Index", "Discuss")</li>
+                        <li class="alltext">@Html.ActionLink("Forum", "Index", "Discusses")</li>
                         <li class="alltext">@Html.ActionLink("Summoners", "Index", "Users")</li>
+                        <li class="alltext">@Html.ActionLink("Forum", "Index", "Forum")</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
